Checked songs + added some new ones with Eszter #2

--- a/songs.tex
+++ b/songs.tex
@@ -10,6 +10,7 @@
 \input{songs/atyam-ket-kezedben.tex}
 \input{songs/atyam-tied-vagyok.tex}
 \input{songs/bizom-benned.tex}
+\input{songs/boldogsag-orom.tex}
 \input{songs/csak-jezusnak-szolgalok.tex}
 \input{songs/ebredj-ember.tex}
 \input{songs/egyutt-fog-ujjongni.tex}
@@ -17,6 +18,7 @@
 \input{songs/feny-ami-bennem-eg.tex}
 \input{songs/foltamadt-alleluja.tex}
 \input{songs/ha-jon-az-ur.tex}
+\input{songs/halat-adok-az-esti-oran.tex}
 \input{songs/halat-adok-hogy-itt-a-reggel.tex}
 \input{songs/hus-ver-templom.tex}
 \input{songs/im-itt-jon-o.tex}
@@ -45,6 +47,7 @@
 \input{songs/napfiver-holdnover.tex}
 \input{songs/ne-felj-mert-megvaltottalak.tex}
 \input{songs/nezz-testver-fel.tex}
+\input{songs/neked-hodolok.tex}
 \input{songs/nincs-mas-isten.tex}
 \input{songs/oly-jo-aldani.tex}
 \input{songs/ott-lelegzel-a-fakban.tex}
