--- a/songs/atya-teremto.tex
+++ b/songs/atya-teremto.tex
@@ -1,12 +1,12 @@
-\beginsong{Atya, Teremtő szeretet Lelke - !!}
+\beginsong{Atya, Teremtő szeretet Lelke}
 [
   index={Áradj szét!}
 ]
 
   \beginverse\memorize
-    \[F]Atya, Teremtő \[A#]szeretet Lelke, \[Am] áradj \[C]szét!
-    \[F]Fiú, Megváltó \[A#]szeretet Lelke, \[Am] áradj \[C]szét!
-    \[F]Egyházvezető \[A#]szeretet Lelke, \[Am] áradj \[C]szét!
+    \[F]Atya, Teremtő \[A#]szeretet Lelke, \[Am] áradj \[C7]szét!
+    \[F]Fiú, Megváltó \[A#]szeretet Lelke, \[Am] áradj \[C7]szét!
+    \[F]Egyházvezető \[A#]szeretet Lelke, \[Am] áradj \[C7]szét!
     \[F]Szentség pecsétje, \[A#]szeretet Lelke, \[C7] áradj \[F]szét!
   \endverse
 
@@ -39,9 +39,9 @@
 
   \beginverse
     ^Dicsőítlek, ^Atya Lelke, ^ szent kegye^lem!
-    ^Magasztallak, ^Fiú Lelke, ^ örök örö^mem!
-    ^Téríts meg engem ^Isten Lelke, ^legyél éle^tem!
-    ^Tarts meg engem, ^szeretet Lelke, ^te vagy Iste^nem!
+    ^Magasztallak, ^Fiú Lelke, ^ örök örö^möm!
+    ^Érints meg engem ^Isten Lelke, ^legyél éle^tem!
+    ^Tarts meg engem, ^szeretet Lelke, ^Te vagy Iste^nem!
   \endverse
 
   \beginverse*
