--- a/songs/egyutt-fog-ujjongni.tex
+++ b/songs/egyutt-fog-ujjongni.tex
@@ -1,4 +1,4 @@
-\beginsong{Együtt fog ujjongni - !!}[]
+\beginsong{Együtt fog ujjongni}[]
 
   \beginverse*
     \[H7]Együtt fog ujjongni \[Em]fiatal és öreg is
@@ -9,7 +9,7 @@
     % {\nolyrics  \[H7] \[Em] \[Am] \[H7]}
 
     \[H7]La, la la la, la la \[Em]la, la-la-la la la la
-    \[Am]La la la la, la la la la, \[H7]la la la la
+    La \[Am]la la la la, la la la la, \[H7]la la la la
   \endverse
 
   \beginverse*
