--- a/songs/jezus-var-terad.tex
+++ b/songs/jezus-var-terad.tex
@@ -1,13 +1,13 @@
-\beginsong{Jézus vár terád - !!}[]
+\beginsong{Jézus vár terád}[]
 
   \beginchorus
-    /: \[Em] Jézus vár ter\[Hm]ád, lelkét küldi hozz\[C]ád,
+    /: \[Em] Jézus vár ter\[Hm]ád, Lelkét küldi hozz\[C]ád,
     Mert közel jön \[D]Ő, irgalmas Üdvözít\[Em]ő. :/ \rep{2}
   \endchorus
 
   \beginverse\memorize
     \[Am]Jöjjetek Hoz\[D]zá, kik \[Hm]szomjazzátok \[C]Őt,
-    \[Am]Belsejéből \[C]élővíz forrása fak\[H7]ad!
+    \[Am]Bensejéből \[C]élő víz forrása fak\[H7]ad!
   \endverse
 
   \beginverse*
@@ -24,7 +24,7 @@
   \endverse
 
   \beginverse
-    ^Jöjjetek Hoz^zá, ti ^alázatos^ok,
+    ^Jöjjetek Hoz^zá, ti ^alázatos^ak,
     ^Nektek akarja ^adni dicső ország^át!
   \endverse
 
