--- a/songs/kicsiny-kis-fenyemmel.tex
+++ b/songs/kicsiny-kis-fenyemmel.tex
@@ -1,4 +1,4 @@
-\beginsong{Kicsiny kis fényemmel - !!}[]
+\beginsong{Kicsiny kis fényemmel}[]
 
   \beginverse\memorize
     \[G]Kicsiny kis fényemmel világítani fogok.
