--- a/songs/krisztus-el-bennem.tex
+++ b/songs/krisztus-el-bennem.tex
@@ -1,8 +1,8 @@
-\beginsong{Krisztus él bennem - ?hisz?}[]
+\beginsong{Krisztus él bennem - nanananana}[]
 
   \ifchorded
     \beginverse*
-       {\nolyrics Előjáték: \[G] \[D] \[C] \[C-=D]}
+       {\nolyrics Előjáték: \[G] \[D] \[C] \[C-D]}
     \endverse
   \fi
 
@@ -11,9 +11,9 @@
     A \[Em]sötét nem győz, hát \[C]nem kell pánik.
     \[G]Jézus \[D]életét \[C]adta, hogy \[D]élj!
     \[G]Krisztus él benned, \[D]ne légy lekvár,
-    ?hisz? \[Em]oly sok kincs van, mi \[C]téged is vár!
+    Hisz \[Em]oly sok kincs van, mi \[C]téged is vár!
     Hát \[G]kelj fel, \[D]indulj és \[C]Krisztussal \[D]járj!
-    
+
     Na na na...
   \endchorus
 
