--- a/songs/latod-ujra-este-van.tex
+++ b/songs/latod-ujra-este-van.tex
@@ -11,7 +11,7 @@
   \endverse
 
   \beginchorus
-    \[C]Kérlek, ó jó Uram, \[Dm]add meg, Fényeddé \[F]váljak, jeled le\[C]hessek!
+    \[C]Kérlek, ó jó Uram, \[Dm]add meg, fényeddé \[F]váljak, jeled le\[C]hessek!
     \[C]Kérlek, Szentlelked \[Dm]küldd el, Ő ve\[F]zessen \[G]végig élete\[C]men!
   \endchorus
 
@@ -28,7 +28,7 @@
   \beginverse*
     Refrén
   \endverse
-  
+
   \beginverse*
     1. versszak \ifchorded{\nolyrics (Csak lehúzásokkal.)}\fi
   \endverse
