--- a/songs/melybol-hozzad-szall-szavam.tex
+++ b/songs/melybol-hozzad-szall-szavam.tex
@@ -1,4 +1,4 @@
-\beginsong{Mélyből Hozzád száll szavam - !!}[]
+\beginsong{Mélyből Hozzád száll szavam}[]
 
   \versesep=12pt plus 3pt minus 9pt
 
@@ -9,39 +9,39 @@
   \fi
 
   \beginverse\memorize
-    A \[Em]mélyből \[H7]hozzád \[Em]száll sza\[Am]vam, \[G]Uram \[H7]irgal\[Em]mazz!
-    A \[Em]bajban \[H7]lelkem \[Em]társta\[Am]lan, \[G]Uram \[H7]irgal\[Em]mazz!
+    A \[Em]mélyből \[H7]Hozzád \[Em]száll sza\[Am]vam, \[G]Uram, \[H7]irgal\[Em]mazz!
+    A \[Em]bajban \[H7]lelkem \[Em]társta\[Am]lan, \[G]Uram, \[H7]irgal\[Em]mazz!
   \endverse
 
   \beginchorus
-    \[Em!]Segíts! Segíts! \[Am!]Ne hagyj! Ne hagyj!
+    \[Em!]Segíts! \echo{Segíts!} \[Am!]Ne hagyj! \echo{Ne hagyj!}
     \[Em]Nézd, \[H7]ránk tör \[Em]a bűn már,
-    \[Em!]Te adj! Te adj! \[Am!]Erőt! Erőt!
-    \[G]Uram \[H7]irgal\[Em]mazz!
+    \[Em!]Te adj! \echo{Te adj!} \[Am!]Erőt! \echo{Erőt!}
+    \[G]Uram, \[H7]irgal\[Em]mazz!
   \endchorus
 
   \beginverse
-    Ha ^ajkam ^vétett ^elle^ned, ^Krisztus ^kegyel^mezz!
-    A ^jóhírt ^zengjem ^csak ve^led, ^Krisztus ^kegyel^mezz!
+    Ha ^ajkam ^vétett ^Elle^ned, ^Krisztus, ^kegyel^mezz!
+    A ^jóhírt ^zengjem ^csak Ve^led, ^Krisztus, ^kegyel^mezz!
   \endverse
 
   \beginchorus
-    \[Em!]Segíts! Segíts! \[Am!]Ne hagyj! Ne hagyj!
+    \[Em!]Segíts! \echo{Segíts!} \[Am!]Ne hagyj! \echo{Ne hagyj!}
     \[Em]Nézd, \[H7]ránk tör \[Em]a bűn már,
-    \[Em!]Te adj! Te adj! \[Am!]Erőt! Erőt!
-    \[G]Krisztus \[H7]kegyel\[Em]mezz!
+    \[Em!]Te adj! \echo{Te adj!} \[Am!]Erőt! \echo{Erőt!}
+    \[G]Krisztus, \[H7]kegyel\[Em]mezz!
   \endchorus
 
   \beginverse
-    Ha ^arcod ^fényét ^elfe^dem, ^Uram ^irgal^mazz!
-    Te ^újból ^hívjál, ^Iste^nem, ^Uram ^irgal^mazz!
+    Ha ^arcod ^fényét ^elfe^dem, ^Uram, ^irgal^mazz!
+    Te ^újból ^hívjál, ^Iste^nem, ^Uram, ^irgal^mazz!
   \endverse
 
   \beginchorus
-    \[Em!]Segíts! Segíts! \[Am!]Ne hagyj! Ne hagyj!
+    \[Em!]Segíts! \echo{Segíts!} \[Am!]Ne hagyj! \echo{Ne hagyj!}
     \[Em]Nézd, \[H7]ránk tör \[Em]a bűn már,
-    \[Em!]Te adj! Te adj! \[Am!]Erőt! Erőt!
-    \[G]Uram \[H7]irgal\[Em]mazz!
+    \[Em!]Te adj! \echo{Te adj!} \[Am!]Erőt! \echo{Erőt!}
+    \[G]Uram, \[H7]irgal\[Em]mazz!
   \endchorus
 
 \endsong
