--- a/songs/minden-mi-el.tex
+++ b/songs/minden-mi-el.tex
@@ -1,10 +1,10 @@
-\beginsong{Minden mi él}[]
+\beginsong{Minden, mi él}[]
   \versesep=12pt plus 3pt minus 8pt
 
   \beginchorus
-    \[D]Minden mi él, csak Téged hirdet,
+    \[D]Minden, mi él, csak Téged hirdet,
     \[Hm]Minden dicsér, mert mind a műved,
-    \[G]Azzal, hogy él, ezt zengi néked:
+    \[G]Azzal, hogy él, ezt zengi Néked:
     \[A]Dicsérlek én, \[A7]dicsérlek Téged!
   \endchorus
 
@@ -12,7 +12,7 @@
     \[D]Dicsér az ég, Nap, Hold és csillagok,
     \[Hm]Fény és sötét, nap, éj és hajnalok.
     \[G]Dicsér a szél, felhő és hóvihar,
-    \[A]A víz, a tűz \[A7]megannyi tiszta dallal!
+    \[A]A víz s a tűz, \[A7]megannyi tiszta dallal!
   \endverse
 
   \beginverse*
@@ -38,7 +38,7 @@
   \endverse
 
   \beginverse*
-    Refrén
+    Refrén \echo{\[D]Dicsérlek én!}
   \endverse
 
 \endsong
