--- a/songs/minden-nap.tex
+++ b/songs/minden-nap.tex
@@ -1,6 +1,6 @@
 \beginsong{Minden nap}
 [
-by={Pintér Béla}
+by={Pintér Béla},
 index={Mit is mondhatnék}
 ]
 
@@ -13,8 +13,8 @@ index={Mit is mondhatnék}
   \beginverse\memorize
     \[D] Mit is \[A]mondhatnék, \[F#m] Te vagy, ki \[E]megváltottál,
     \[D] Drága \[A]véreddel \[F#m] hófe\[E]hérre mostál,
-    \[D] Minden\[A]em lettél, \[F#m] tiéd az \[E]egész lényem,
-    \[D] Ég a \[A]tűz bennem, \[F#m] csak \[E]érted élek \[A]már! \[D] \[F#m] \[E]
+    \[D] Minden\[A]em lettél, \[F#m] Tiéd az \[E]egész lényem,
+    \[D] Ég a \[A]tűz bennem, \[F#m] csak \[E]Érted élek \[A]már! \[D] \[F#m] \[E]
   \endverse
 
   \ifchorded
@@ -31,17 +31,17 @@ index={Mit is mondhatnék}
   \endverse
 
   \beginchorus
-    /: \[A] Minden \[D]nap csak \[F#m]érted \[E]élek.
+    /: \[A] Minden \[D]nap csak \[F#m]Érted \[E]élek.
     \[A] Minden \[D]nap kö\[F#m]vetlek \[E]Téged.
-    \[A] Minden \[D]nap Ve\[F#m]led já\[E]rok u\[A]ram. \[D] \[F#m] \[E] :/ \rep{2}
+    \[A] Minden \[D]nap Ve\[F#m]led já\[E]rok, U\[A]ram. \[D] \[F#m] \[E] :/ \rep{2}
   \endchorus
 
-  \beginverse
-    /: \[A]Érted \[D]élek \[F#m]minden \[E]nap. :/ \rep{3}
-    U\[A]ram \[D] \[F#m] \[E]
+  \beginverse*
+    /: \[A]Érted \[D]élek \[F#m]minden \[E]nap! :/ \rep{3}
+    U\[A]ram! \[D] \[F#m] \[E]
   \endverse
 
-  \beginverse
+  \beginverse*
     Refrén \rep{2}
   \endverse
 
