--- a/songs/most-nem-sietek.tex
+++ b/songs/most-nem-sietek.tex
@@ -1,4 +1,4 @@
-\beginsong{Most nem sietek - !!}
+\beginsong{Most nem sietek - ?utolsó két versszak?}
 [
   by={Túrmezei Erzsébet}
 ]
@@ -6,7 +6,6 @@
   \beginverse\memorize
     \[Em]Most nem sie\[G]tek, most nem roha\[D]nok,
     \[Em]Most nem terve\[G]zek, \[C]most nem aka\[D]rok,
-    Most ...
   \endverse
 
   \beginchorus
@@ -19,19 +18,19 @@
   \beginverse
     ^Most megnyug^szom, most elpihe^nek,
     ^Békén, szaba^don, ^mint gyenge gye^rek,
-    Nem, ...
+    Nem, nem teszek ...
   \endverse
-  
+
   \beginverse
-    ^S míg ölel a ^fény és ölel a ^csend,
+    ^S míg ölel a ^fény, és ölel a ^csend,
     ^És árad be^lém, ^és újjáte^remt,
-    Míg ...
+    Míg nem teszek ...
   \endverse
-  
+
   \beginverse
     ^Új gyümölcs te^rem, másoknak te^rem,
     ^Érik csende^sen ^erő, győze^lem,
-    Ha ...
+    Ha nem teszek ...
   \endverse
 
 \endsong
