--- a/songs/mustarmag.tex
+++ b/songs/mustarmag.tex
@@ -1,21 +1,21 @@
-\beginsong{Mustármag - !!}[]
+\beginsong{Mustármag - !spanyol!}[]
 
-  \beginverse
+  \beginverse*
     /: Hogyha csak \[Am]mustármagnyi hitetek is \[E]volna...
     Ezt mondotta a mi U\[Am]runk. :/ \rep{2}
   \endverse
 
-  \beginverse
+  \beginverse*
     /: És ha így \[Dm]szóltok a nagy he\[Am]gyekhez:
     Mozdulja\[E]tok, mozdulja\[Am]tok! :/ \rep{2}
   \endverse
 
-  \beginverse
+  \beginverse*
     /: \[Am] Akkor a hegyek megindul\[E]nak,
     Megindulnak, megindul\[Am]nak. :/ \rep{4}
   \endverse
 
-  \beginverse
+  \beginverse*
     /: \[Am]Jöjj el, jöjj el, ó \[E]jöjj el Szent\[Am]lélek! :/ \rep{4}
   \endverse
 
