--- a/songs/napfiver-holdnover.tex
+++ b/songs/napfiver-holdnover.tex
@@ -1,33 +1,48 @@
-\beginsong{Napfivér, holdnővér - !!}[]
+\beginsong{Napfivér, Holdnővér}[]
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[D] \[D4] \[D] \[D4]}
+      {\nolyrics Előjáték: \[D4] \[D] \[D4] \[D]}
     \endverse
   \fi
 
   \beginverse\memorize
-    \[D]Fívérem \[F#m]Nap, és \[G]nő\[A]vérem \[D]Hold,
+    \[D]Fivérem \[F#m]Nap, és \[G]nő\[A]vérem \[D]Hold,
     \[Hm]Oly’ ritkán \[F#m]látlak, s \[G]hallom \[A]hango\[D]tok.
     \[Hm] Nyomaszt a \[F#m]sok \[G]gyötre\[A]lem és \[D]gond.
   \endverse
 
+  \ifchorded
+    \beginverse*
+      {\nolyrics Közjáték: \[Hm] \[F#m] \[G] \[A] \[D]}
+    \endverse
+  \fi
 
   \beginverse
-    ^Fívérem ^Szél és ^Le^vegő^ég,
-    ^Nyisd ki sze^mem, hogy ^lássam, ^ami ^szép!
-    ^Körülö^lel a ^ragyo^gás, dics^fény.
+    ^Fivérem ^Szél és ^Le^vegő^ég,
+    ^ Nyisd ki sze^mem, hogy ^lássam, ^ami ^szép!
+    ^ Körülö^lel a ^ragyo^gás, dics^fény.
   \endverse
 
   \beginchorus
     \[Hm]Mert Isten \[F#m]műve \[G]minden \[A]teremt\[D]mény,
-    \[Hm]Érzem jó\[F#m]ságát, és \[G]szívem \[A4]újra \[D]él!
+    \[Hm] Érzem jó\[F#m]ságát, és \[G]szívem újra {\[A4 A]é}l!
   \endchorus
 
   \beginverse
-    Fívérem Nap és nővérem Hold,
-    Most végre látok, s hallom hangotok!
-    Megölelném az egész világot!
+    ^Fivérem ^Nap és ^nő^vérem ^Hold,
+    ^Most végre ^látok, s ^hallom ^hango^tok!
+    ^ Megölel^ném az ^egész ^vilá^got!
+  \endverse
+
+  \beginverse*
+    Refrén
+  \endverse
+
+  \beginverse*
+    ^Fivérem ^Nap és ^nő^vérem ^Hold,
+    ^Most végre ^látok, s ^hallom ^hango^tok!
+    ^ Megölel^ném az ^egész ^vilá\[Gm]got! \[Gm7] ^
   \endverse
 
 \endsong
