--- a/songs/ne-felj-mert-megvaltottalak.tex
+++ b/songs/ne-felj-mert-megvaltottalak.tex
@@ -1,4 +1,4 @@
-\beginsong{Ne félj, mert megváltottalak -- !!}[]
+\beginsong{Ne félj, mert megváltottalak}[]
 
   \beginchorus
     /: \[D]Ne félj, mert \[G]megváltotta\[A]lak,
@@ -11,7 +11,7 @@
     \[A]Viruló réteken \[D]át, \[G]hűs forrás fe\[A]lé vezetlek,
     \[Hm]Pásztorod va\[Em]gyok, elveszni \[A]senkit nem ha\[D]gyok.
     Karom fe\[Hm]léd tá\[Em]rom, kiárad \[G]áldá\[D]som.
-    \[Hm]Nem rejtőzőm \[Em]el, szívem a \[A]szívednek fe\[D]lel,
+    \[Hm]Nem rejtőzöm \[Em]el, szívem a \[A]szívednek fe\[D]lel,
     Amikor \[Hm]úgy ér\[Em]zed, nyomaszt a \[A7]é\[D]let.
   \endverse
 
