--- a/songs/nezz-testver-fel.tex
+++ b/songs/nezz-testver-fel.tex
@@ -1,9 +1,9 @@
-\beginsong{Nézz, testvér, fel - !!}[]
+\beginsong{Nézz, testvér, fel}[]
 
   \beginchorus
     \[D]Nézz, testvér, fel, az \[F#m]Úr van itt, \[G]lángol\[A]jon a szí\[D]vünk!
     \[G]Közel van már \[F#m]üdvös\[Hm]ségünk,
-    \[G]Jöjj el \[Em]Jézu\[A]sunk, \[G]jöjj el \[A]Jézu\[D]sunk!
+    \[G]Jöjj el, \[Em]Jézu\[A]sunk, \[G]jöjj el, \[A]Jézu\[D]sunk!
   \endchorus
 
   \beginverse\memorize
@@ -17,7 +17,7 @@
 
   \beginverse
     ^Figyelme szeretőn kí^sér, meghall^gatja ^az i^mám.
-    ^Gyötrelmeimben vigaszt nyújt, ezért ^áldja ^Őt a ^szám!
+    ^Gyötrelmeimben vigaszt ^nyújt, ezért ^áldja ^Őt a ^szám!
   \endverse
 
   \beginverse*
@@ -26,7 +26,7 @@
 
   \beginverse
     ^Jöjjön, ki szomjas és i^gyék, aki ^hisz, ^élni ^fog!
-    ^Szívének rejtett mélyé^ből az é^lő víz ^felbu^zog.
+    ^Szívének rejtett mélyé^ből az élő ^víz ^felbu^zog.
   \endverse
 
   \beginverse*
