--- a/songs/o-az-ur.tex
+++ b/songs/o-az-ur.tex
@@ -1,7 +1,9 @@
-\beginsong{Ő az Úr -- !}[]
+\beginsong{Ő az Úr}[]
+
+  \versesep=12pt plus 3pt minus 9pt
 
   \beginverse\memorize
-    Ő az \[H7]Úr! Ő az \[E]Úr! Meghalt értem a ke\[F#m?]reszten, Ő az \[H7]Úr!
+    Ő az \[H7]Úr! Ő az \[E]Úr! Meghalt értem a ke\[C#m]reszten, Ő az \[H7]Úr!
   \endverse
 
   \beginchorus
@@ -11,11 +13,44 @@
   \endchorus
 
   \beginverse
-    Ő az ^Úr! Ő az ^Úr! Feltámadott a ha^lálból, Ő az ^Úr!
+    Ő az ^Úr! \echo{Ő az Úr!} \echo{Ő az Úr!} Ő az ^Úr! \echo{Ő az Úr!}
+    Feltámadott a ha^lálból, Ő az ^Úr!
+  \endverse
+
+  \beginverse*
+    Refrén
   \endverse
 
   \beginverse
-    Ő az ^Úr! Ő az ^Úr! Betölt engem Szentlel^kével, Ő az ^Úr!
+    Ő az ^Úr! \echo{Ő az Úr!} Ő az ^Úr! \echo{Ő az Úr!}
+    Betölt engem Szentlel^kével, Ő az ^Úr!
+  \endverse
+
+  \beginverse*
+    Refrén
+  \endverse
+
+  \beginverse
+    Ő az ^Úr! \echo{Ő az Úr!} Ő az ^Úr! \echo{Ő az Úr!}
+    Táplál engem szent tes^tével, Ő az ^Úr!
+  \endverse
+
+  \beginverse*
+    Refrén
+  \endverse
+
+  \beginverse
+    Ő az ^Úr! \echo{Ő az Úr!} Ő az ^Úr! \echo{Ő az Úr!}
+    Táplál engem szent vé^rével, Ő az ^Úr!
+  \endverse
+
+  \beginverse*
+    Refrén
+  \endverse
+
+  \beginverse*
+    Ő az ^Úr! \echo{Ő az Úr!} Ő az ^Úr! \echo{Ő az Úr!}
+    Ő az \[H7]Úr! \echo{Ő az Úr!} Ő az {\[A E]Ú}r! \echo{Ő az Úr!}
   \endverse
 
 \endsong
