--- a/songs/oly-jo-aldani.tex
+++ b/songs/oly-jo-aldani.tex
@@ -1,70 +1,66 @@
-\beginsong{Oly' jó áldani - !!}[]
+\beginsong{Oly' jó áldani}[]
 
-  \beginverse
+  \beginverse*
     \[F]Szívemből \[C]ünnepi \[F]ének á\[C]rad,
     \[G]Háladalt \[G7]éneklek az \[F]ég Urá\[C]nak!
     \[G]Ujjongva \[G7]tör fel a \[F]hála ben\[C]nem,
-    \[Dm]Jósága \[G]körül\[C]vesz \[G]szárnyként \[G7]en\[C]gem. - !!
+    \[Dm]Jósága körülvesz \[G]szárnyként \[G7]en\[C]gem. \[Dm] \[G] \[C]
   \endverse
 
-  \beginverse
+  \beginverse*
     \[G]Adjatok \[G7]hálát az \[C]Istennek!
     \[G7]Adjatok hálát az \[C]Istennek!
-    \[C7]Ő a mi teremtő \[F]Kirá\[G]lyunk, - !!
+    \[C7]Ő a mi teremtő \[F]Kirá\[G]lyunk,
     \[D]Alle-allelu\[G]ja, \[F]allelu\[C]ja, \[F]allelu\[C]ja! \[H7]
   \endverse
 
-  \beginverse
-    /: \[E]Hála legyen, hála legyen, hála, \[A]áldott az \[E]Úr! :/ \rep{3} \[H7??]
+  \beginverse*
+    /: \[E]Hála legyen, hála legyen, hála, \[A]áldott az \[E]Úr! :/ \rep{3}
   \endverse
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték.: \[A] \[E] \[A] \[E]}
+      {\nolyrics Átvezető.: \[D] \[A] /: \[A] \[E] \[A] \[E] :/ \rep{2}}
     \endverse
   \fi
 
-  \beginverse
+  \beginverse\memorize
     \[A]Oly’ jó ál\[E]dan\[A]i az \[E]Ur\[A]at, \[A] \[E] \[A] \[E]
     \[E]Ujjongó\[A]an \[E]jó Is\[A]ten\[E]nek zen\[A]ge\[D]ni zsoltáro\[A]kat. \[A] \[E] \[A] \[E]
   \endverse
 
   \beginverse
     ^Már kora reg^ge^len jó^sá^gát, ^ ^ ^ ^
-    ^És éjszakákon át hirdetem szüntelen nagy irgalmát. ^ ^ ^ ^
+    És ^éjszaká^kon ^át hir^de^tem szün^te^len nagy irgal^mát. ^ ^ ^ ^
   \endverse
 
   \beginverse
     ^Pengő hang^sze^ren, lan^to^kon, ^ ^ ^ ^
-    ^Ujjongóan jó Istennek zengeni hálaszót. ^ ^ ^ ^
+    ^Ujjongó^an ^jó Is^ten^nek zen^ge^ni hála^szót. ^ ^ ^ ^
   \endverse
 
   \beginverse
     ^Az öröm hang^ja^i szól^ja^nak, ^ ^ ^ ^
-    ^Gitár húrjain magasztalom ujjongva csodáidat! ^ ^ ^ ^
+    ^Gitár húr^ja^in magasz^ta^lom uj^jong^va csodái^dat! ^ ^ ^ ^
   \endverse
 
-  \ifchorded
-    \textnote{gitár nélkül}
-  \fi
+  \chordsoff
 
-  \beginverse
-    Uram jó voltál énhozzám,
-    Életemben nagy dolgokat műveltél sok év során.
-  \endverse
+    \beginverse
+      Uram jó voltál énhozzám,
+      Életemben nagy dolgokat műveltél sok év során.
+    \endverse
 
-  \beginverse
-    Sziklám, oltalmam Te voltál,
-    Oly’ irgalmasan jó, gondoskodó Istenem, égi Atyám.
-  \endverse
+    \beginverse
+      Sziklám, oltalmam Te voltál,
+      Oly’ irgalmasan jó, gondoskodó Istenem, égi Atyám.
+    \endverse
 
-  \ifchorded
-    \textnote{gitárral}
-  \fi
+  \chordson
 
   \beginverse
     ^Hála di^cső^ség Ne^ved^nek, ^ ^ ^ ^
-    ^Most és örökké az égen, a földön! Amen. ^ ^ ^ ^
+    ^Most és ö^rök^ké az ^é^gen, a ^Föl^dön! A^men. ^ ^ ^ ^ \[A]
   \endverse
 
 \endsong
