--- a/songs/peter-ne-sirj.tex
+++ b/songs/peter-ne-sirj.tex
@@ -1,4 +1,4 @@
-\beginsong{Péter, ne sírj - !!}[]
+\beginsong{Péter, ne sírj}[]
 
   \beginverse\memorize
     \[Em]Sírásodat hagyd nyugodtan abba,
@@ -14,7 +14,7 @@
 
   \beginverse
     ^Gyengeségünk néha úgy esik ránk,
-    Mint kisgyermekre esik a féle^lem.
+    Mint kisgyermekre esik a ^féle^lem.
     ^Gyengeségért mindig bünte^tés jár,
     De ^büntetése ^nem sújt, fele^mel!
   \endverse
@@ -25,11 +25,11 @@
 
   \beginverse
     ^Reménytelen a bűn után az élet,
-    Hogy mégis élsz már alig hiszed ^el,
+    Hogy mégis élsz már alig ^hiszed ^el,
     ^Alig hiszed, hogy nem lett akkor ^vége,
-    Csak ^egyet tudsz, ^hulló könnye^ket!
+    Csak ^egyet tudsz, a ^hulló könnye^ket!
   \endverse
-  
+
   \beginverse*
     Refrén \rep{2}
   \endverse
