--- a/songs/rejts-most-el.tex
+++ b/songs/rejts-most-el.tex
@@ -9,20 +9,20 @@
   \endverse
 
   \beginchorus
-    \[C]Tenger tombol, \[F]zúg, sü\[G]vít a sz\[C]él,
-    \[C]Te emelsz fel \[F]a vi\[G]har fö\[Am]lé!
-    \[C]Uralkodsz hul\[F]lámok \[G]habja\[C]in,
-    \[C]Szívem nem f\[F]él, ben\[G]ned re\[Am]mél!
-    \[C]Szívem nem f\[F]él, ben\[G]ned re\[F]mél! \[G]
+    \[C]Tenger tombol, \[F]zúg, süv\[G]ít a sz\[C]él,
+    \[C]Te emelsz fel \[F]a vih\[G]ar fö\[Am]lé!
+    \[C]Uralkodsz hul\[F]lámok h\[G]abja\[C]in,
+    \[C]Szívem nem f\[F]él, Benn\[G]ed rem\[Am]él!
+    \[C]Szívem nem f\[F]él, Benn\[G]ed rem\[F]él! \[G]
   \endchorus
 
   \beginverse
     Csak ^Is^ten^ben bízz, ^én ^lel^kem!
-    ^Mert ^ő ^él, ^nagyobb ^minden^nél!
+    ^Mert ^Ő ^él, ^nagyobb ^minden^nél!
   \endverse
-  
+
   \beginverse*
-    Refrén
+    Refrén  \[C]
   \endverse
 
 \endsong
