--- a/songs/vak-ember.tex
+++ b/songs/vak-ember.tex
@@ -4,7 +4,7 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[Am] \[G] \[F] \[E]}
+      {\nolyrics Előjáték: /: \[Am] \[G] \[F] \[E] :/ \rep{2}}
     \endverse
   \fi
 
@@ -15,7 +15,7 @@
   \beginchorus
     Oh, oh, \[E7]oh!
     Hol van az {\[Am G F]ú}t? \[E]Hol van a f{\[Am G F]é}ny, \[E]az igazs{\[Am G F]á}g,
-    Ami haza\[E]visz? Oh, \[E7]oh, oh, \[E]oh, oh, \[E7]oh, oh, oh! (- Egyel kevesebb oh?)
+    Ami haza\[E]visz? Oh-\[E7]oh-oh, \[E]oh-oh, \[E7]oh-oh!
   \endchorus
 
   \beginverse
@@ -28,14 +28,14 @@
   \endverse
 
   \beginverse
-    S ?mi? \[Am]mind csak ü\[G]lünk, és a \[F]szívünk ki\[E]ált, \rep{3} -- kell ide "mi"?
+    S mi \[Am]mind csak ü\[G]lünk, és a \[F]szívünk ki\[E]ált, \rep{3}
   \endverse
 
   \beginverse
     De \[Am]Jézus is \[G]ott ül ve\[F]lünk és ki\[E]ált, \rep{3}
     Oh, oh, \[E7]oh!
     Én vagyok az {\[Am G F]ú}t, az igazs{\[Am G F]á}g, és az élet,
-    Ami haza\[E]visz! Oh, \[E7]oh, oh, \[E]oh, oh, \[E7]oh, oh, oh! (- Egyel kevesebb oh?)
+    Ami haza\[E]visz! Oh-\[E7]oh-oh, \[E]oh-oh, \[E7]oh-oh!
   \endverse
 
   \beginverse*
@@ -45,7 +45,7 @@
   \beginverse*
     Oh, oh, \[E7]oh!
     Én vagyok az {\[Am G F]ú}t, az igazs{\[Am G F]á}g, és az élet,
-    Ami haza\[E]visz! Oh, \[E7]oh, oh, \[E]oh, oh, \[E7]oh, oh, oh! (- Egyel kevesebb oh?)
+    Ami haza\[E]visz! Oh-\[E7]oh-oh, \[E]oh-oh, \[E7]oh-oh!
   \endverse
 
   \beginverse*
