--- a/compilations/antiochia.tex
+++ b/compilations/antiochia.tex
@@ -19,7 +19,7 @@
 \SetWatermarkLightness{0.9}
 
 % \title{Budaörsi Antiochia dalgyűjtemény akkordokkal}
-\author{Benkő Matyi - Donkó István}
+\author{Balics Eszter - Donkó István}
 % \date{2017. február 5.}
 
 % \title{Budaörsi Antiochia daloskönyv}
