--- a/songs/itt-vagyok-most-jo-uram.tex
+++ b/songs/itt-vagyok-most-jo-uram.tex
@@ -1,24 +1,24 @@
-\beginsong{Itt vagyok most, jó Uram - !!}[]
+\beginsong{Itt vagyok most, jó Uram}[]
 
   \beginverse\memorize
     \[D]Itt vagyok most, jó Uram, \[G]Hozzád száll e dal.
-    \[D]Tudom, sokszor hívtalak, de ma \[G]másképp szól e hang
-    mert ma \[Em]nem azt kérem, hogy \[A]adj még, nem kö\[D]nyörgök: figyelj r\[G]ám,
-    csak \[D]azt mon\[Hm7]dom, hogy \[Em7]szeret\[A7]lek, Aty\[D]ám! \[D7]
+    \[D]Tudom, sokszor hívtalak, de ma \[G]másképp szól e hang,
+    Mert ma \[Em]nem azt kérem, hogy \[A]adj még, nem kö\[D]nyörgök: figyelj r\[G]ám,
+    Csak \[D]azt mon\[Hm7]dom, hogy \[Em7]szeret\[A7]lek, Aty\[D]ám! \[D7]
   \endverse
 
   \beginchorus
     Szeret\[Em7]lek, ó, U\[A7]ram, hálám \[D]szívemből fak\[G]ad, hiszen
-    \[Em7]mindent látsz Te ben\[A]nem, \[D]hatalmad olyan \[D7]nagy
+    \[Em7]Mindent látsz Te ben\[A]nem, \[D]hatalmad olyan \[D7]nagy!
     Szeret\[Em7]lek, ó, U\[A]ram, hálám \[D]szívemből fak\[G]ad
-    és \[D]ének\[Hm7]lem, hogy \[Em7]áldott \[A7]légy U\[D]ram!
+    És \[D]ének\[Hm7]lem, hogy \[Em7]áldott \[A7]légy U\[D]ram!
   \endchorus
 
   \beginverse
-    ^Ismét térden állok én, s ^tudom hogy hallgatsz rám.
+    ^Ismét térden állok én, s ^tudom, hogy hallgatsz rám.
     Bár ^sokszor hideg szavakat szól ^kopott és halk imám,
     De most ^el kell, hogy mondjam egy^szer, amit ^oly rég szeretn^ék,
-    hogy ^szeretl^ek, a ^szívem csak ti^éd! ^ ^
+    Hogy ^szeretl^ek, a ^szívem ^csak ti^éd! ^
   \endverse
 
   \beginverse*
