--- a/songs/mennek-az-asszonyok.tex
+++ b/songs/mennek-az-asszonyok.tex
@@ -1,4 +1,4 @@
-\beginsong{Mennek az aszonyok - !!}[]
+\beginsong{Mennek az aszonyok}[]
 
   \ifchorded
     \beginverse*
@@ -8,7 +8,7 @@
 
   \beginverse\memorize
     \[D]Mennek az asszony\[A]ok, \[G]mennek az Úr \[D]sírjához,
-    \[Em]Keresik \[D]Azt, akit \[A]megöltek, \[Em]keresik \[D]Azt, akit \[A]szerettek,
+    \[Em]Keresik \[D]azt, akit \[A]megöltek, \[Em]keresik \[D]azt, akit \[A]szerettek,
     \[G]Mennek az \[A]asszony\[D]ok.
   \endverse
 
@@ -27,7 +27,7 @@
   \beginverse
     ^Jézus megmond^ta, ^harmadnapra ^feltámadt,
     ^Üres ^már a ^sír, ^terjed^jen a ^hír,
-    ^Él a mi ^megvál^tónk.
+    ^Él a mi ^Megvál^tónk.
   \endverse
 
   \beginverse
