--- a/songs/nincs-mas-isten.tex
+++ b/songs/nincs-mas-isten.tex
@@ -1,38 +1,33 @@
-\beginsong{Nincs más isten - !!}
+\beginsong{Nincs más isten}
 [
   by={Chris Tomlin, fordította Váradi Attila},
-  li={http://nyugodtleszazeleted.blogspot.hu/2010/11/nincs-mas-isten.html}
+  li={http://nyugodtleszazeleted.blogspot.hu/2010/11/nincs-mas-isten.html},
+  index={Nálad lett borrá a víz}
 ]
 
   \beginverse\memorize
-    \[Em]Nálad lett \[C]borrá a \[Em]víz, \[C] H\[Em]oltakat \[C]életre \[G]hívsz,
-    Nincs más \[Am7]Isten, Nincsen \[D]más.
+    \[Em]Nálad lett \[C]borrá a \[Em]víz, \[C] h\[Em]oltakat \[C]életre \[G]hívsz,
+    Nincs más \[Am7]isten, nincsen \[D]más.
   \endverse
 
   \beginverse
-    ^Te ragyo^god be az ^éjt, ^ ^te hozod ^el a re^ményt.
-    Nincs más ^Isten, nincsen ^más.
+    ^Te ragyo^god be az ^éjt, ^ ^Te hozod ^el a re^ményt.
+    Nincs más ^isten, nincsen ^más.
   \endverse
-  
-  \beginchorus
-    \[Em]Te vagy az Isten, \[C]aki nevére
-    \[G]Leborul minden a \[D]földön, az égen,
-    \[Em]Hegyeket mozdít, \[C]beteget gyógyít
-    Az \[G]Úr ma i\[D]s!
 
-    \[Em]Te vagy az Isten, \[C]aki nevére
-    \[G]Leborul minden a \[D]földön, az égen,
-    \[Em]Szíveket hódít, \[C]sebeket gyógyít
-    Az \[G]Úr ma i\[D]s!
+  \beginchorus
+    \[Em]Te vagy az Isten, \[C]aki nevére \[G]leborul minden a \[D]Földön, az égen,
+    \[Em]Hegyeket mozdít, \[C]beteget gyógyít az \[G]Úr ma i\[D]s!
+
+    \[Em]Te vagy az Isten, \[C]aki nevére \[G]leborul minden a \[D]Földön, az égen,
+    \[Em]Szíveket hódít, \[C]sebeket gyógyít az \[G]Úr ma i\[D]s!
+
+    /: \[Em] És hogyha Isten velünk, \[C] ember mit árthat nekünk,
+    \[G] Mert hogyha Te vagy velünk, \[D] ki lehet ellenünk? :/ \rep{2}
   \endchorus
 
   \beginverse*
-    /: \[Em] És hogyha Isten velünk, \[C] Ember mit árthat nekünk,
-    \[G] Mert hogyha Te vagy velünk, \[D] Ki lehet ellenünk? :/ \rep{3}
-  \endverse
-  
-  \beginverse*
-    \textnote{Csak a legvégén:} \[D]Mi állhat ellenünk?
+    Refrén \echo{\[D]Mi állhat ellenünk?}
   \endverse
 
 \endsong
