--- a/songs/szeretem-orokke.tex
+++ b/songs/szeretem-orokke.tex
@@ -5,9 +5,9 @@
 
   \beginverse\memorize
     \[C]Eléd lépek, jó Uram, hol \[G/H]béke és nyugalom \[Am]vár,
-    \[Em]Vágyom, hogy érints \[Dm]lelkeddel, hogy \[F]múljék, ami \[G]fáj.
+    \[Em]Vágyom, hogy érints \[Dm]Lelkeddel, hogy \[F]múljék, ami \[G]fáj.
     Én \[C]hiszem, hogy itt vagy közöttünk és \[G/H]halkan, szelíden \[Am]hívsz.
-    És mi \[Em]társaid leszünk \[Dm]örökké hol \[F]boldog dalát \[G]zengi minden \[C]szív.
+    És mi \[Em]társaid leszünk \[Dm]örökké, hol \[F]boldog dalát \[G]zengi minden \[C]szív.
   \endverse
 
   \beginchorus
@@ -19,7 +19,11 @@
     ^Közénk térdelsz, jó Urunk, ^féltő szeretet^tel,
     És egy ^új életnek ^boldogsága ^érző szívre ^lel.
     Én ^tudom, hogy itt vagy közöttünk és ^halkan, szelíden ^hívsz.
-    És mi ^társaid leszünk ^örökké hol ^boldog dalát ^zengi minden ^szív.
+    És mi ^társaid leszünk ^örökké, hol ^boldog dalát ^zengi minden ^szív.
+  \endverse
+
+  \beginverse*
+    Refrén
   \endverse
 
 \endsong
