Added three songs

--- a/songs.tex
+++ b/songs.tex
@@ -4,11 +4,13 @@
 \input{songs/aldjad-en-lelkem-az-urat.tex}
 \input{songs/aldjatok-az-urat.tex}
 \input{songs/aldott-legy-uram.tex}
+\input{songs/almaimbol-lelkembol.tex}
 \input{songs/antioch-dal.tex}
 \input{songs/aroni-aldas.tex}
 \input{songs/atya-teremto.tex}
 \input{songs/atyam-ket-kezedben.tex}
 \input{songs/atyam-tied-vagyok.tex}
+\input{songs/beke-napja-kozel.tex}
 \input{songs/bizom-benned.tex}
 \input{songs/boldogsag-orom.tex}
 \input{songs/csak-jezusnak-szolgalok.tex}
@@ -42,6 +44,7 @@
 \input{songs/mennek-az-asszonyok.tex}
 \input{songs/minden-mi-el.tex}
 \input{songs/minden-nap.tex}
+\input{songs/mint-az-asszony.tex}
 \input{songs/most-nem-sietek.tex}
 \input{songs/mustarmag.tex}
 \input{songs/napfiver-holdnover.tex}
