Added and fixed songs

--- a/songs.tex
+++ b/songs.tex
@@ -39,6 +39,7 @@
 \input{songs/koszonom-jezus.tex}
 \input{songs/krisztus-el-bennem.tex}
 \input{songs/latod-ujra-este-van.tex}
+\input{songs/lelkem-az-urat-dicserd.tex}
 \input{songs/loyolai-szent-ignac-imaja.tex}
 \input{songs/melybol-hozzad-szall-szavam.tex}
 \input{songs/mennek-az-asszonyok.tex}
