--- a/songs/add-tovabb.tex
+++ b/songs/add-tovabb.tex
@@ -34,8 +34,11 @@
   \endverse
 
   \beginverse*
-    /: A \[G]hegy csúcsáról \[D]kiáltok: Uram! \[Em]Tárd fel a \[A]vilá\[D]gom!
-    Hogy \[G]tovább \[Em]adjam \[A]én a \[G]szeretet \[A]Iste\[D]nét. :/ \rep{2}
+    /: A \[G]hegy csúcsáról \[D]kiáltok: Uram! \[Em] Tárd fel a \[A]vilá\[D]gom!
+    \[G]Hogy to\[D]vább \[G]adjam \[D]én a \[G]szeretet \[A]Iste\[D]nét. :/ \rep{2}
+
+    % /: A \[G]hegy csúcsáról \[D]kiáltok: Uram! \[Em]Tárd fel a \[A]vilá\[D]gom!
+    % Hogy \[G]tovább \[Em]adjam \[A]én a \[G]szeretet \[A]Iste\[D]nét. :/ \rep{2}
   \endverse
 
 \endsong
