--- a/songs/atyam-ket-kezedben.tex
+++ b/songs/atyam-ket-kezedben.tex
@@ -4,7 +4,7 @@
     \[Dm]Atyám, két ke\[C]zedben, \[A7]csak ott lakha\[Dm]tom,
     \[F]Biztonságot \[C]csak Tõled ka\[Dm]pok. \[G]
     \[Dm]Újjá így te\[C]remtesz, \[A7]sebem ápo\[Dm]lod,
-    \[F]Boldogság, hogy \[C]itt van ott\[Dm]hono\[G]m.
+    \[F]Boldogság, hogy \[C]itt van ottho\[Dm]nom. \[G]
   \endverse
 
   \beginchorus
