--- a/songs/halat-adok-az-esti-oran.tex
+++ b/songs/halat-adok-az-esti-oran.tex
@@ -1,4 +1,7 @@
-\beginsong{Hálát adok az esti órán - !sorrend!}[]
+\beginsong{Hálát adok az esti órán - !sorrend, változatok!}
+[
+  index={Esti ima}
+]
 
   % / jelek után: https://www.youtube.com/watch?v=ggrTwNKP5Ew
 
