--- a/songs/halat-adok-hogy-itt-a-reggel.tex
+++ b/songs/halat-adok-hogy-itt-a-reggel.tex
@@ -1,4 +1,7 @@
-\beginsong{Hálát adok, hogy itt a reggel}[]
+\beginsong{Hálát adok, hogy itt a reggel}
+[
+  index={Reggeli ima}
+]
 
   \beginverse\memorize
     \[D]Hálá\[Hm]t adok, hogy \[Em]itt a \[A6]reggel,
