--- a/songs/latod-ujra-este-van.tex
+++ b/songs/latod-ujra-este-van.tex
@@ -1,7 +1,7 @@
 \beginsong{Látod, újra este van}[]
 
   \beginverse\memorize
-    \[C] Látod, újra este van, Hozzád száll most \[C/H]halk \[Am]szavam,
+    \[C] Látod, újra este van, Hozzád száll most \[C/H]halk sza\[Am]vam,
     \[Dm] Mindenségnek Iste\[F]ne, \[G] Téged dicsér éne\[C]kem.
   \endverse
 
